--- a/config.gradle
+++ b/config.gradle
@@ -15,7 +15,7 @@ ext {
     android = [
             compileSdkVersion       : 27,
             buildToolsVersion       : "27.0.3",
-            minSdkVersion           : 14,
+            minSdkVersion           : 15,
             targetSdkVersion        : 27,
 
             versionCode             : 100,
@@ -37,6 +37,9 @@ ext {
 
             businessModuleReadVersionCode :100,
             businessModuleReadVersionName :"1.0.0",
+
+            businessModuleJian3VersionCode :100,
+            businessModuleJian3VersionName :"1.0.0",
 
             //p-business-module
             businessComponentInitGuideVersionCode :100,
@@ -131,5 +134,96 @@ ext {
                 "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1"
         ]
 
+    android1 = [
+            compileSdkVersion       : 27,
+            buildToolsVersion       : "27.0.3",
+            minSdkVersion           : 15,
+            targetSdkVersion        : 27,
+            versionCode             : 101,
+            versionName             : "2.0.1",
+    ]
 
+    version1 = [
+            androidSupportSdkVersion: "27.0.2",
+            retrofitSdkVersion      : "2.2.0",
+            dagger2SdkVersion       : "2.10",
+            butterknifeSdkVersion   : "8.5.1",
+            rxlifecycleSdkVersion   : "1.0",
+            rxlifecycle2SdkVersion   : "2.0.1",
+            espressoSdkVersion      : "2.2.2",
+            canarySdkVersion        : "1.5"
+    ]
+
+    dependencies1 = [
+            //support
+            "appcompat-v7"             : "com.android.support:appcompat-v7:${version1["androidSupportSdkVersion"]}",
+            "design"                   : "com.android.support:design:${version1["androidSupportSdkVersion"]}",
+            "support-v4"               : "com.android.support:support-v4:${version1["androidSupportSdkVersion"]}",
+            "cardview-v7"              : "com.android.support:cardview-v7:${version1["androidSupportSdkVersion"]}",
+            "annotations"              : "com.android.support:support-annotations:${version1["androidSupportSdkVersion"]}",
+            "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version1["androidSupportSdkVersion"]}",
+
+            //network
+            "retrofit"                 : "com.squareup.retrofit2:retrofit:${version1["retrofitSdkVersion"]}",
+            "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version1["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava"  : "com.squareup.retrofit2:adapter-rxjava:${version1["retrofitSdkVersion"]}",
+            "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version1["retrofitSdkVersion"]}",
+            "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.7.0",
+            "okhttp-urlconnection"     : "com.squareup.okhttp:okhttp-urlconnection:2.0.0",
+            "glide"                    : "com.github.bumptech.glide:glide:3.8.0",
+            "picasso"                  : "com.squareup.picasso:picasso:2.5.2",
+
+            //view
+            "autolayout"               : "com.zhy:autolayout:1.4.5",
+            "butterknife"              : "com.jakewharton:butterknife:${version1["butterknifeSdkVersion"]}",
+            "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${version1["butterknifeSdkVersion"]}",
+            "pickerview"               : "com.bigkoo:pickerview:2.0.8",
+            "photoview"                : "com.github.chrisbanes.photoview:library:1.2.3",
+            "numberprogressbar"        : "com.daimajia.numberprogressbar:library:1.2@aar",
+            "nineoldandroids"          : "com.nineoldandroids:library:2.4.0",
+            "paginate"                 : "com.github.markomilos:paginate:0.5.1",
+
+            //rx1
+            "rxandroid"                : "io.reactivex:rxandroid:1.2.1",
+            "rxjava"                   : "io.reactivex:rxjava:1.2.9",
+            "rxlifecycle"              : "com.trello:rxlifecycle:${version1["rxlifecycleSdkVersion"]}",
+            "rxlifecycle-components"   : "com.trello:rxlifecycle-components:${version1["rxlifecycleSdkVersion"]}",
+            "rxcache"                  : "com.github.VictorAlbertos.RxCache:runtime:1.7.0-1.x",
+            "rxcache-jolyglot-gson"    : "com.github.VictorAlbertos.Jolyglot:gson:0.0.3",
+            "rxbinding-recyclerview-v7": "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.1",
+            "rxpermissions"            : "com.tbruyelle.rxpermissions:rxpermissions:0.9.3@aar",
+            "rxerrorhandler"           : "me.jessyan:rxerrorhandler:1.0.1",
+
+            //rx2
+            "rxandroid2"                : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "rxjava2"                   : "io.reactivex.rxjava2:rxjava:2.1.0",
+            "rxlifecycle2"              : "com.trello.rxlifecycle2:rxlifecycle:${version1["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-components"   : "com.trello.rxlifecycle2:rxlifecycle-components:${version1["rxlifecycle2SdkVersion"]}",
+            "rxcache2"                  : "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x",
+            "rxpermissions2"            : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar",
+            "rxerrorhandler2"           : "me.jessyan:rxerrorhandler:2.0.1",
+
+            //tools
+            "dagger2"                  : "com.google.dagger:dagger:${version1["dagger2SdkVersion"]}",
+            "dagger2-compiler"         : "com.google.dagger:dagger-compiler:${version1["dagger2SdkVersion"]}",
+            "androideventbus"          : "org.simple:androideventbus:1.0.5.1",
+            "otto"                     : "com.squareup:otto:1.3.8",
+            "gson"                     : "com.google.code.gson:gson:2.8.0",
+            "multidex"                 : "com.android.support:multidex:1.0.1",
+            "javax.annotation"         : "javax.annotation:jsr250-api:1.0",
+
+            //test
+            "junit"                    : "junit:junit:4.12",
+            "androidJUnitRunner"       : "android.support.test.runner.AndroidJUnitRunner",
+            "runner"                   : "com.android.support.test:runner:0.5",
+            "espresso-core"            : "com.android.support.test.espresso:espresso-core:${version1["espressoSdkVersion"]}",
+            "espresso-contrib"         : "com.android.support.test.espresso:espresso-contrib:${version1["espressoSdkVersion"]}",
+            "espresso-intents"         : "com.android.support.test.espresso:espresso-intents:${version1["espressoSdkVersion"]}",
+            "mockito-core"             : "org.mockito:mockito-core:1.+",
+            "timber"                   : "com.jakewharton.timber:timber:4.5.1",
+            "canary-debug"             : "com.squareup.leakcanary:leakcanary-android:${version1["canarySdkVersion"]}",
+            "canary-release"           : "com.squareup.leakcanary:leakcanary-android-no-op:${version1["canarySdkVersion"]}",
+            "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1"
+    ]
 }
+
