--- a/p-base-component/base-component-view/build.gradle
+++ b/p-base-component/base-component-view/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat-v7"]
+    implementation rootProject.ext.dependencies["recyclerview-v7"]
 }
