--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         //lambda
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+
+        classpath 'com.alibaba:arouter-register:1.0.0'
     }
 }
 
