--- a/p-business-module/business-module-read/src/main/AndroidManifest.xml
+++ b/p-business-module/business-module-read/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/read_launcher"
         android:label="@string/app_name"
@@ -19,6 +20,7 @@
         </activity>
         <activity android:name=".ReadMainActivity"/>
         <activity android:name=".ReadDetailActivity"/>
+        <activity android:name=".LoginActivity"/>
     </application>
 
 </manifest>
