--- a/p-business-module/business-module-read/src/main/AndroidManifest.xml
+++ b/p-business-module/business-module-read/src/main/AndroidManifest.xml
@@ -11,16 +11,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReadInitActivity">
+        <activity android:name=".ui.activity.ReadInitActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadMainActivity"/>
-        <activity android:name=".ReadDetailActivity"/>
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".ui.activity.ReadMainActivity"/>
+        <activity android:name=".ui.activity.ReadDetailActivity"/>
+        <activity android:name=".ui.activity.LoginActivity"/>
     </application>
 
 </manifest>
