--- a/config.gradle
+++ b/config.gradle
@@ -48,6 +48,11 @@ ext {
     ]
 
     dependencies = [
+
+                "bottom-navigation-bar"          : "com.ashokvarma.android:bottom-navigation-bar:1.3.0",
+                "slidableactivity"          : "com.r0adkll:slidableactivity:2.0.5",
+
+
                 "arouter-api"          : "com.alibaba:arouter-api:1.2.1.1",
                 "arouter-compiler"          : "com.alibaba:arouter-compiler:1.1.2.1",
 
