--- a/p-base-component/base-component-simplemvp/build.gradle
+++ b/p-base-component/base-component-simplemvp/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation rootProject.ext.dependencies["appcompat-v7"]
+    implementation rootProject.ext.dependencies["recyclerview-v7"]
 }
