--- a/p-business-module/business-module-j3new/build.gradle
+++ b/p-business-module/business-module-j3new/build.gradle
@@ -23,6 +23,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependencies["appcompat-v7"]
+    implementation rootProject.ext.dependencies["BaseRecyclerViewAdapterHelper"]
+
+    implementation project(':p-base-component:base-component-view')
 }
 
 
