--- a/p-business-module/business-module-j3new/build.gradle
+++ b/p-business-module/business-module-j3new/build.gradle
@@ -22,14 +22,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation rootProject.ext.dependencies["SwipeToLoadLayout"]
     implementation rootProject.ext.dependencies["design"]
     implementation rootProject.ext.dependencies["appcompat-v7"]
     implementation rootProject.ext.dependencies["BaseRecyclerViewAdapterHelper"]
-    implementation (rootProject.ext.dependencies["bottom-navigation-bar"]){
+    implementation(rootProject.ext.dependencies["bottom-navigation-bar"]) {
         exclude module: 'design'
     }
-
     implementation project(':p-base-component:base-component-view')
+    implementation project(':p-base-component:swipeToLoadLayoutTemplate')
+    compile project(path: ':p-base-component:base-componet-general')
 }
 
 
