--- a/p-business-module/business-module-j3new/src/main/AndroidManifest.xml
+++ b/p-business-module/business-module-j3new/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".J3NewActivity">
+        <activity android:name=".ui.activity.J3NewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
