--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
