--- a/p-business-module/business-module-j3new/build.gradle
+++ b/p-business-module/business-module-j3new/build.gradle
@@ -22,6 +22,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation rootProject.ext.dependencies["okhttp3"]
+    implementation rootProject.ext.dependencies["retrofit"]
     implementation rootProject.ext.dependencies["cardview-v7"]
     implementation rootProject.ext.dependencies["glide"]
     implementation rootProject.ext.dependencies["gson"]
